# rustfig-beta

./: Cargo.toml  Install.MD  README.md  cli_command_structure.MD  platform-specific-optimizations.md
resources/config/: ai_models.yaml  appearance.yaml  config.yaml  keybindings.yaml
resources/shell/bash/: core.sh
resources/shell/fish/: core.fish
resources/shell/zsh/: core.zsh
src/: ai.rs  config.rs  main.rs  plugin.rs  prediction.rs  shell.rs  suggestion.rs  terminal.rs  utils.rs
src/ai/: cache.rs  client.rs  conversation.rs  ollama.rs
src/cli/: commands.rs
src/config/: init.rs  schema.rs
src/plugin/: api.rs
src/prediction/: cache.rs  context_analyzers.rs  engine.rs  learning.rs  models.rs  ranking.rs
src/shell/: fish.rs  zsh.rs
src/telementary/: feedback.rs  mod.rs  usage.rs
src/terminal/: ghosting.rs  mod.rs
src/utils/: concurrent.rs  ml_optimizations.rs  perf_metrics.rs  string_pools.rs
