[package]
name = "rustfig"
version = "0.1.0"
edition = "2021"
authors = ["RustFig Team"]
description = "Ultra-fast, context-aware terminal assistant"
license = "MIT"
repository = "https://github.com/rustfig/rustfig"

[dependencies]
# Core dependencies - keep minimal
crossterm = "0.27"             # Terminal manipulation
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"             # YAML config parsing
dirs = "5.0"                   # Finding config directories
hashbrown = "0.14"             # Faster hashmap implementation
parking_lot = "0.12"           # More efficient synchronization primitives
memchr = "2.6"                 # Fast string searching
ahash = "0.8"                  # Faster hashing algorithm
smallvec = "1.11"              # Stack-allocated vectors for small collections
once_cell = "1.19"             # Lazy statics
regex = { version = "1.10", default-features = false, features = ["std", "perf"] }
mlua = { version = "0.9", optional = true, features = ["lua54", "vendored"] }

# AI integration
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Optional features
notify = { version = "6.1", optional = true }  # Filesystem monitoring

[dev-dependencies]
criterion = "0.5"              # Benchmarking
tempfile = "3.9"               # Temporary files for tests

[features]
default = ["path-monitoring", "git-integration"]
path-monitoring = ["dep:notify"]
git-integration = []
docker-integration = []
advanced-scripting = ["dep:mlua"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1                  # Slightly faster builds while debugging

[[bin]]
name = "rustfig"
path = "src/main.rs"
